// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remax render insert new element 1`] = `
Object {
  "$$REMAX_ROOT": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "text": "1",
                  "type": Symbol(text),
                },
              ],
              "id": 0,
              "props": Object {},
              "type": "view",
            },
            Object {
              "children": Array [
                Object {
                  "text": "3",
                  "type": Symbol(text),
                },
              ],
              "id": 1,
              "props": Object {},
              "type": "view",
            },
          ],
          "id": 2,
          "props": Object {},
          "type": "view",
        },
      ],
      "type": "root",
    },
  ],
}
`;

exports[`remax render insert new element 2`] = `
Object {
  "$$REMAX_ROOT": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "text": "1",
                  "type": Symbol(text),
                },
              ],
              "id": 0,
              "props": Object {},
              "type": "view",
            },
            Object {
              "children": Array [
                Object {
                  "text": "2",
                  "type": Symbol(text),
                },
              ],
              "id": 0,
              "props": Object {},
              "type": "view",
            },
            Object {
              "children": Array [
                Object {
                  "text": "3",
                  "type": Symbol(text),
                },
              ],
              "id": 1,
              "props": Object {},
              "type": "view",
            },
          ],
          "id": 2,
          "props": Object {},
          "type": "view",
        },
      ],
      "type": "root",
    },
  ],
}
`;

exports[`remax render render correctly 1`] = `
Object {
  "$$REMAX_ROOT": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "text": "hello",
              "type": Symbol(text),
            },
          ],
          "id": 0,
          "props": Object {
            "className": "foo",
          },
          "type": "view",
        },
      ],
      "type": "root",
    },
  ],
}
`;

exports[`remax render umount component 1`] = `
Object {
  "$$REMAX_ROOT": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "text": "foo",
                  "type": Symbol(text),
                },
              ],
              "id": 0,
              "props": Object {},
              "type": "view",
            },
          ],
          "id": 1,
          "props": Object {},
          "type": "view",
        },
      ],
      "type": "root",
    },
  ],
}
`;

exports[`remax render umount component 2`] = `
Object {
  "$$REMAX_ROOT": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": 1,
          "props": Object {},
          "type": "view",
        },
      ],
      "type": "root",
    },
  ],
}
`;
